implement naive API note add
